# yggdrasil-lite

./: .gitignore  Cargo.toml  README.md
examples/: gen_test_keys.rs  lite_node.rs
examples/esp32/: Cargo.toml  README.md
examples/esp32/.cargo/: config.toml
examples/esp32/src/: main.rs
examples/esp32c6/: Cargo.toml  README.md
examples/esp32c6-iot/: Cargo.toml  README.md
examples/esp32c6-iot/.cargo/: config.toml
examples/esp32c6-iot/src/: main.rs  onewire.rs  telnet.rs  ws2812.rs
examples/esp32c6/src/: main.rs
src/: address.rs  bloom.rs  crypto.rs  lib.rs  meta.rs  node.rs  pathfinder.rs  peer.rs  session.rs  tree.rs  wire.rs
tests/: e2e.sh  e2e_multi.sh
